--- a/acanthes/templates/archives/index.html
+++ b/acanthes/templates/archives/index.html
@@ -6,6 +6,13 @@
 <script>
   $(document).ready(function() { $("#id_annee, #id_kf_id_lieu, #id_kf_id_orchestre, #id_kf_id_intervenant_principal").select2(); });
 </script>
+{% if home %}
+<div class="hero-unit">
+	<h1>Les archives d'Acanthes</h1>
+	<p>Depuis 1977, les compositeurs sont au cœur de la démarche d’Acanthes. Certains d’entre eux ont été, à juste titre, considérés comme des maîtres à penser, et il était donc légitime de leur donner prioritairement la parole pour répondre aux attentes de jeunes musiciens impatients d’appréhender, dans sa diversité, l’état de la création musicale contemporaine. Vingt ans, trente ans plus tard, alors que tant d’invités d’Acanthes nous ont quittés, il est important de retrouver leur parole. Malgré quelques lacunes bien involontaires, c’est le résultat de cette précieuse collecte qui est intégralement inscrite désormais sur le portail de la musique contemporaine.</p>
+	<p style="text-align:right">Claude Samuel</p>
+</div>
+{% endif %}
 <div class="row">
   <div class="span8">
     <table class="table table-striped">
