show duration in hour in the player, and add participant filtering possibility

--- a/acanthes/templates/archives/index.html
+++ b/acanthes/templates/archives/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <script>
-  $(document).ready(function() { $("#id_annee, #id_kf_id_lieu, #id_kf_id_orchestre, #id_kf_id_intervenant_principal").select2(); });
+  $(document).ready(function() { $("#id_annee, #id_kf_id_lieu, #id_kf_id_orchestre, #id_kf_id_intervenant_principal, #id_intervenants").select2(); });
 </script>
 {% if home %}
 <div class="hero-unit">
